--- a/elme/en.lproj/MainStoryboard.storyboard
+++ b/elme/en.lproj/MainStoryboard.storyboard
@@ -73,12 +73,20 @@
                                 <nil key="highlightedColor"/>
                                 <size key="shadowOffset" width="3" height="-4"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="X8L-zJ-JbV">
+                                <rect key="frame" x="156" y="357" width="164" height="15"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="12"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" title="elme" id="3Y2-09-zFC"/>
                     <connections>
                         <outlet property="tableView" destination="i6b-X1-APc" id="twb-hJ-cqB"/>
+                        <outlet property="versionLabel" destination="X8L-zJ-JbV" id="WOP-cV-vbl"/>
                     </connections>
                 </viewController>
             </objects>
